# receipt-to-voucher-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: human_review.md  taxonomy.md
fixtures/: README.md
sample_receipts/: README.md
src/: __init__.py  categorize.py  extract.py  mock.py  pipeline.py  schema.py  validate.py
tests/: test_validate.py
